--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,20 @@
 click==7.1.2
+cycler==0.10.0
 gensim==3.8.3
 joblib==1.0.0
+kiwisolver==1.3.1
+lxml==4.6.2
+matplotlib==3.3.3
 nltk==3.5
 numpy==1.19.5
+Pillow==8.1.0
+pyparsing==2.4.7
+python-dateutil==2.8.1
 regex==2020.11.13
+scikit-learn==0.24.0
 scipy==1.6.0
 six==1.15.0
+sklearn==0.0
 smart-open==4.1.0
+threadpoolctl==2.1.0
 tqdm==4.56.0
